Добавлены сущности проекта, с которыми будет производиться дальнейшая работа. Реализована работа с Microsoft Word - замена шаблона на конкретный документ. Добавлена часть проверок на исключения.

--- a/CarsRent.WPF/CarsRent.WPF.csproj
+++ b/CarsRent.WPF/CarsRent.WPF.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CarsRent.BL\CarsRent.BL.csproj">
+      <Project>{77e38c5f-7bb0-4630-b6ce-9630ef1ac88b}</Project>
+      <Name>CarsRent.BL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
