--- a/CarsRent.BL/CarsRent.BL.csproj
+++ b/CarsRent.BL/CarsRent.BL.csproj
@@ -52,12 +52,22 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataBase\Query.cs" />
+    <Compile Include="Context.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\Car.cs" />
     <Compile Include="Entities\Contract.cs" />
     <Compile Include="Entities\LandLord.cs" />
-    <Compile Include="Entities\Passport.cs" />
     <Compile Include="Entities\Renter.cs" />
+    <Compile Include="Migrations\202108210823403_InitialCreate.cs" />
+    <Compile Include="Migrations\202108210823403_InitialCreate.designer.cs">
+      <DependentUpon>202108210823403_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202108210859574_deleting passport.cs" />
+    <Compile Include="Migrations\202108210859574_deleting passport.designer.cs">
+      <DependentUpon>202108210859574_deleting passport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\GlobalSettings.cs" />
     <Compile Include="Settings\InputsToSettings.cs" />
@@ -100,6 +110,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202108210823403_InitialCreate.resx">
+      <DependentUpon>202108210823403_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108210859574_deleting passport.resx">
+      <DependentUpon>202108210859574_deleting passport.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
