--- a/CarsRent.BL/CarsRent.BL.csproj
+++ b/CarsRent.BL/CarsRent.BL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Entities\Contract.cs" />
     <Compile Include="Entities\LandLord.cs" />
     <Compile Include="Entities\Renter.cs" />
+    <Compile Include="Entities\RideType.cs" />
     <Compile Include="Migrations\202108210823403_InitialCreate.cs" />
     <Compile Include="Migrations\202108210823403_InitialCreate.designer.cs">
       <DependentUpon>202108210823403_InitialCreate.cs</DependentUpon>
