--- a/CarsRent.BL/CarsRent.BL.csproj
+++ b/CarsRent.BL/CarsRent.BL.csproj
@@ -77,9 +77,7 @@
     <Compile Include="Validation\DateAttribute.cs" />
     <Compile Include="Validation\MoneyAttribute.cs" />
     <Compile Include="Validation\ValidationHelper.cs" />
-    <Compile Include="Word\CreateDocument.cs" />
-    <Compile Include="Word\Document.cs" />
-    <Compile Include="Word\ReplaceRules.cs" />
+    <Compile Include="Word\DocumentManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="Microsoft.Office.Core">
@@ -118,6 +116,12 @@
     <EmbeddedResource Include="Migrations\202109300945538_global_model_changes.resx">
       <DependentUpon>202109300945538_global_model_changes.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\TemplateDocs\TemplateDocs.LIB\TemplateDocs.LIB.csproj">
+      <Project>{EE7B555C-E1CF-4BD4-B48D-5C40781ED274}</Project>
+      <Name>TemplateDocs.LIB</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
